--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   provider: ^4.3.1
   cloud_firestore: ^0.13.7
   fluttertoast: 3.1.3
+  uuid: ^2.2.0
+  carousel_pro: ^1.0.0
+  extended_image: ^0.9.0
+  paginate_firestore: ^0.1.1+1
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
+  path_provider:
+  autocomplete_textfield: ^1.7.3
+  flutter_datetime_picker: ^1.3.8
+  flutter_paystack: ^1.0.3+1
 
 
   # The following adds the Cupertino Icons font to your application.
