--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   autocomplete_textfield: ^1.7.3
   flutter_datetime_picker: ^1.3.8
   flutter_paystack: ^1.0.3+1
+  flutter_spinkit: ^4.1.2+1
+
 
 
   # The following adds the Cupertino Icons font to your application.
