--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - asset/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -90,10 +90,10 @@ flutter:
           weight: 700
         - asset: fonts/Lato-Italic.ttf
           style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+    - family: MyFlutterApp
+      fonts:
+        - asset: fonts/MyFlutterApp.ttf
+  #       - asset: MyFlutterApp.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
