--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_paystack: ^1.0.3+1
   flutter_spinkit: ^4.1.2+1
   carousel_slider: ^2.2.1
+  flutter_svg: ^0.17.1
   font_awesome_flutter:
   url_launcher:
 
