--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   carousel_slider: ^2.2.1
   flutter_svg: ^0.18.0
   font_awesome_flutter:
-#  url_launcher: ^5.5.0
+  image_picker: ^0.6.7+7
+  firebase_storage: ^3.0.3
+  #  url_launcher: ^5.5.0
   
 
 
