--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   font_awesome_flutter:
   image_picker: ^0.6.7+7
   firebase_storage: ^3.0.3
+  get: ^3.5.1
   #  url_launcher: ^5.5.0
   
 
