--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.6.7+7
   firebase_storage: ^3.0.3
   get: ^3.5.1
+  connectivity: ^0.4.6
   #  url_launcher: ^5.5.0
   
 
