--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,10 @@ dependencies:
     sdk: flutter
     
   
-  firebase_auth: ^0.16.1
+  firebase_auth: ^0.18.0+1
   provider: ^4.3.1
-  cloud_firestore: ^0.13.7
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
   fluttertoast: 3.1.3
   uuid: ^2.2.0
   carousel_pro: ^1.0.0
@@ -44,7 +45,7 @@ dependencies:
   flutter_svg: ^0.18.0
   font_awesome_flutter:
   image_picker: ^0.6.7+7
-  firebase_storage: ^3.0.3
+  firebase_storage: ^4.0.0
   get: ^3.5.1
   connectivity: ^0.4.6
   intl: ^0.16.1
