--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_paystack: ^1.0.3+1
   flutter_spinkit: ^4.1.2+1
   carousel_slider: ^2.2.1
+#  clipboard_manager: ^0.0.1
   flutter_svg: ^0.18.0
   font_awesome_flutter:
   image_picker: ^0.6.7+7
