--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,12 @@ dependencies:
   get: ^3.5.1
   connectivity: ^0.4.6
   intl: ^0.16.1
+  intro_slider: ^2.3.2
   #  url_launcher: ^5.5.0
-  
+  shared_preferences: ^0.5.10
+  after_layout: ^1.0.7+2
+
+
 
 
 
