--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   shared_preferences: ^0.5.10
   after_layout: ^1.0.7+2
 
-
+  # For displaying and getting star rating
+  smooth_star_rating: ^1.1.1
 
 
 
