--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   #  url_launcher: ^5.5.0
   shared_preferences: ^0.5.10
   after_layout: ^1.0.7+2
+  admob_flutter: ^0.3.4
 
   # For displaying and getting star rating
   smooth_star_rating: ^1.1.1
