--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  rename: ^1.2.0
+
   firebase_auth: ^0.18.0+1
   provider: ^4.3.1
   firebase_core: ^0.5.0
