--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   connectivity: ^0.4.6
   intl: ^0.16.1
   intro_slider: ^2.3.2
-  #  url_launcher: ^5.5.0
+  url_launcher: ^5.5.0
   shared_preferences: ^0.5.10
   after_layout: ^1.0.7+2
   admob_flutter: ^0.3.4
