--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=SamuelS
-keyPassword=SamuelS
-keyAlias=key
-storeFile=/home/cykic/key.jks
+storePassword= ohstel
+keyPassword= ohstel
+keyAlias= key
+storeFile= ../key.jks
